@@ -1,5 +1,8 @@
 2007-11-21  Roland Mas  <lolando@debian.org>
 
+	* common/include/session.php: Made session_check_ip() able to
+	compare IPv6 addresses as well as IPv4 ones.
+
 	* deb-specific/install-db.sh: Setup database for access through
 	the Unix socket rather than TCP socket (in order to lighten the
 	dependency on IP addresses).
